<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="P_EnOcean" Id="{d2583012-7b8d-42b3-930e-7213eee0e992}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM P_EnOcean
VAR
	fbKL6581			: FB_KL6581;
	stKL6581_in  AT %I* : KL6581_INPUT;
	stKL6581_out AT %Q*	: KL6581_OUTPUT;
	stKL6581			: STR_KL6581;
	bInitCom			: BOOL := TRUE;
	
	arrEnOcean_Search	: ARRAY [1..8] OF FB_EnOcean_Search;
	nSearchIdx			: BYTE;
	bSerach				: BOOL;
	arrDevices			: ARRAY [1..8] OF INT;
	arrID				: ARRAY [1..8, 0..255] OF DWORD;
	
	fbGang_1_108_Tryk: FB_Rec_RPS_Switch;
	fbRum_1_106_Tryk: FB_Rec_RPS_Switch;
	fbRum_1_111E_Tryk: FB_Rec_RPS_Switch;
	fbRum_1_115_Tryk_Gang: FB_Rec_RPS_Switch;
	fbRum_1_115_Tryk_Ydermur: FB_Rec_RPS_Switch;
	fbRum_1_118_Tryk: FB_Rec_RPS_Switch;
	
END_VAR

VAR CONSTANT
	byNode_1: BYTE := 1;
	byNode_2: BYTE := 2;
	byNode_3: BYTE := 3;
	byNode_4: BYTE := 4;
	byNode_5: BYTE := 5;
	byNode_6: BYTE := 6;
	byNode_7: BYTE := 7;
	byNode_8: BYTE := 8;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[
(* Kommunikation mit der KL6581. *)
(* Communication with the KL6581. *)
fbKL6581(
	bInit			:= bInitCom,
	nIdx			:= 2,
	stKL6581_in		:= stKL6581_In,
	stKL6581_out	:= stKL6581_Out,
	bReady			=> ,
	bBusy			=> ,
	bError			=> ,
	iErrorID		=> ,
	str_KL6581		=> stKL6581);

(* Warten bis der Kommunikationsbaustein initialisiert wurde.*)
(* Wait until the communication function block has been initialized. *)
IF (NOT fbKL6581.bReady) THEN
	RETURN;
END_IF

FOR nSearchIdx:= 1 TO 8 DO
	arrEnOcean_Search[nSearchIdx](
		bStart:= TRUE, 
		str_KL6581:= stKL6581 , 
		byNode:= nSearchIdx, 
		bReceive=> , 
		iDevices=>arrDevices[nSearchIdx] , 
		ar_ID=> );
		
		MEMCPY(ADR(arrID[nSearchIdx,0]), ADR(arrEnOcean_Search[nSearchIdx].ar_ID), SIZEOF(arrEnOcean_Search[nSearchIdx].ar_ID)); 
END_FOR

A_Gang_1_108();
A_Rum_1_106();
A_Rum_1_111E();
A_Rum_1_115();
A_Rum_1_118();

]]></ST>
    </Implementation>
    <Action Name="A_Gang_1_108" Id="{8247182c-a772-4b27-815a-da064112dabc}">
      <Implementation>
        <ST><![CDATA[fbGang_1_108_Tryk(
	str_KL6581:=stKL6581 , 
	byNode:=byNode_2 , 
	dw_ID:= 16#21C437, 
	str_EnOceanSwitch=> GVL_EnOcean.strEnOceanSwitch_Gang_1_108, 
	by_Node=> , 
	bReceive=> );]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_Rum_1_106" Id="{aeb6deef-b26d-4eb5-9023-a9a71a25ad64}">
      <Implementation>
        <ST><![CDATA[fbRum_1_106_Tryk(
	str_KL6581:=stKL6581 , 
	byNode:=byNode_2 , 
	dw_ID:= 16#29B97C, 
	str_EnOceanSwitch=> GVL_EnOcean.strEnOceanSwitch_Rum_1_106, 
	by_Node=> , 
	bReceive=> );]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_Rum_1_111E" Id="{c1018473-a577-4d13-a175-23e7a83aff12}">
      <Implementation>
        <ST><![CDATA[fbRum_1_111E_Tryk(
	str_KL6581:=stKL6581 , 
	byNode:=byNode_2 , 
	dw_ID:= 16#29B924, 
	str_EnOceanSwitch=> GVL_EnOcean.strEnOceanSwitch_Rum_1_111E, 
	by_Node=> , 
	bReceive=> );]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_Rum_1_115" Id="{9b19b9a0-a59e-4a54-894f-6288c0e17d75}">
      <Implementation>
        <ST><![CDATA[fbRum_1_115_Tryk_gang(
	str_KL6581:=stKL6581 , 
	byNode:=byNode_2 , 
	dw_ID:= 16#29B932, 
	str_EnOceanSwitch=> GVL_EnOcean.strEnOceanSwitch_Rum_1_115_Gang, 
	by_Node=> , 
	bReceive=> );
	
	fbRum_1_115_Tryk_ydermur(
	str_KL6581:=stKL6581 , 
	byNode:=byNode_2 , 
	dw_ID:= 16#29B884, 
	str_EnOceanSwitch=> GVL_EnOcean.strEnOceanSwitch_Rum_1_115_Ydermur, 
	by_Node=> , 
	bReceive=> );]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_Rum_1_118" Id="{a55f8d9b-d18b-4047-89e1-dbfc7fb4b8a6}">
      <Implementation>
        <ST><![CDATA[fbRum_1_118_Tryk(
	str_KL6581:=stKL6581 , 
	byNode:=byNode_2 , 
	dw_ID:= 16#29B77C, 
	str_EnOceanSwitch=> GVL_EnOcean.strEnOceanSwitch_Rum_1_118, 
	by_Node=> , 
	bReceive=> );]]></ST>
      </Implementation>
    </Action>
  </POU>
</TcPlcObject>